--- a/.github/workflows/jpackage-linux-x64.yml
+++ b/.github/workflows/jpackage-linux-x64.yml
@@ -22,6 +22,7 @@ jobs:
         uses: ncipollo/release-action@v1
         id: create_release
         with:
+          tag: ${{ github.ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
           replaceArtifacts: false
